[package]
name = "nexus-pls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.9", features = ["macros", "auto-send"] }
tracing-subscriber = "0.3"
tracing = "0.1"
tokio = { version =  "1", features = ["full", "rt-multi-thread", "macros"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.5"
lazy_static = "1"
redis = { version = "0.21", features = ["tokio-comp"] }
chrono = "0.4"
hyper-tls = "0.5"
serde_json = "1"
